--- a/letskubedeploy.yaml
+++ b/letskubedeploy.yaml
@@ -15,6 +15,8 @@ spec:
       containers:
       - name: letskube
         image: haelshabacr.azurecr.io/helshabini/letskube:latest
+        imagePullSecrets:
+        - name: haelshabacrsp
         imagePullPolicy: IfNotPresent
       restartPolicy: Always
   selector:
