--- a/letskubedeploy.yaml
+++ b/letskubedeploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: letskube
-        image: haelshabacr.azurecr.io/helshabini/letskube:latest
+        image: haelshabacr.azurecr.io/letskube:latest
         imagePullPolicy: IfNotPresent
       imagePullSecrets:
       - name: haelshabacrsp
